--- a/source/styles/blocks/catalog-additionally.scss
+++ b/source/styles/blocks/catalog-additionally.scss
@@ -1,5 +1,19 @@
+.catalog-additionally__wrapper {
+  width: 100%;
+  padding: 0 20px 40px;
+  box-sizing: border-box;
+  position: relative;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog-additionally__wrapper {
+    padding: 0 30px 80px;
+  }
+}
+
 @media screen and (min-width: 1440px) {
   .catalog-additionally__wrapper {
+    padding: 80px 110px 0;
     display: flex;
     gap: 80px;
     align-items: center;
@@ -12,12 +26,19 @@
   font-weight: 400;
   line-height: 24px;
   color: #000000;
+  background-color: #ffffff;
+  width: max-content;
+  position: relative;
+  margin: 0;
+  padding: 24px 40px 35px 20px;
 }
 
 @media screen and (min-width: 768px) {
   .catalog-additionally__title {
     font-size: 32px;
     line-height: 32px;
+    margin-left: 30px;
+    padding: 0 40px 80px;
   }
 }
 
@@ -25,6 +46,33 @@
   .catalog-additionally__title {
     font-size: 40px;
     line-height: 40px;
+    padding: 0 40px;
+    margin-left: 70px;
+  }
+}
+
+.catalog-additionally__wrapper::after {
+  content: "";
+  z-index: -1;
+  background-color: #68b738;
+  height: 2px;
+  position: absolute;
+  top: -48px;
+  left: 0;
+  right: 0;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+@media screen and (min-width: 768px) {
+  .catalog-additionally__wrapper::after {
+    top: -96px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .catalog-additionally__wrapper::after {
+    top: -18px;
   }
 }
 
@@ -34,25 +82,43 @@
   padding: 0;
 }
 
+@media screen and (min-width: 1440px) {
+  .catalog-additionally__list {
+    width: 100%;
+  }
+}
+
 .catalog-additionally__item {
-  width: 280px;
+  width: 100%;
+  border-top: 1px solid #cdcdcd;
+  padding: 12px 0 18px;
+}
+
+.catalog-additionally__item:last-child {
+  border-bottom: 1px solid #cdcdcd;
 }
 
 @media screen and (min-width: 768px) {
   .catalog-additionally__item {
-    width: 632px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding: 26px 38px;
+    box-sizing: border-box;
+    border: 1px solid #cdcdcd;
   }
 }
 
-@media screen and (min-width: 1140px) {
+@media screen and (min-width: 1440px) {
   .catalog-additionally__item {
-    width: 894px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+    padding: 15px 0;
+    align-items: center;
   }
 }
 
@@ -63,12 +129,23 @@
   line-height: 16px;
   color: #222222;
   text-transform: uppercase;
+  margin: 0;
+  padding-bottom: 13px;
 }
 
 @media screen and (min-width: 768px) {
   .catalog-additionally__caption {
     font-size: 20px;
     line-height: 20px;
+    padding-bottom: 25px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .catalog-additionally__caption {
+    font-size: 20px;
+    line-height: 20px;
+    padding: 0;
   }
 }
 
@@ -86,6 +163,15 @@
   .catalog-additionally__text {
     font-size: 16px;
     line-height: 20px;
+    gap: 50px;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .catalog-additionally__text {
+    margin-left: auto;
+    width: 285px;
   }
 }
 
@@ -93,11 +179,10 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
-  width: 280px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  display: block;
+  padding: 10px 0;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -106,9 +191,10 @@
   }
 }
 
-@media screen and (min-width: 1140px) {
+@media screen and (min-width: 1440px) {
   .catalog-additionally__button {
     width: 244px;
+    margin-left: 40px;
   }
 }
 
@@ -119,15 +205,21 @@
 .catalog-additionally__gift {
   background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../../images/catalog-cat-bg-mobile@1x.png" 1x, "../../images/catalog-cat-bg-mobile@2x.png" 2x);
   background-repeat: no-repeat;
-  width: 280px;
+  background-size: cover;
+  width: 100%;
   height: 290px;
+  margin-top: 35px;
+  position: relative;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
   .catalog-additionally__gift {
     background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../../images/catalog-cat-bg-tablet@1x.png" 1x, "../../images/catalog-cat-bg-tablet@2x.png" 2x);
-    width: 707px;
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 200px;
+    margin-top: 70px;
   }
 }
 
@@ -137,6 +229,7 @@
     background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../../images/catalog-cat-bg-desktop@1x.png" 1x, "../../images/catalog-cat-bg-desktop@2x.png" 2x);
     width: 245px;
     height: 288px;
+    margin: 0;
   }
 }
 
@@ -146,10 +239,28 @@
   font-weight: 400;
   line-height: 20px;
   color: #ffffff;
+  width: 165px;
   position: relative;
+  padding-top: 187px;
+  margin: 0 auto;
 }
 
-.catalog-additionally__description::before {
+@media screen and (min-width: 768px) {
+  .catalog-additionally__description {
+    text-align: left;
+    margin-right: 125px;
+    padding: 71px 2px 69px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .catalog-additionally__description {
+    text-align: center;
+    padding: 185px 42px 0;
+  }
+}
+
+.catalog-additionally__gift::before {
   content: "";
   background-image: url("../../icons/stack.svg#gift");
   background-repeat: no-repeat;
@@ -157,12 +268,26 @@
   width: 78px;
   height: 80px;
   position: absolute;
+  top: 59px;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 @media screen and (min-width: 768px) {
-  .catalog-additionally__description::before {
+  .catalog-additionally__gift::before {
     background-size: 80px 83px;
     width: 80px;
     height: 83px;
+    top: 50%;
+    left: 77px;
+    transform: translateY(-50%);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .catalog-additionally__gift::before {
+    top: 56px;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
