--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -1,6 +1,21 @@
 .subscribe__wrapper {
+  width: 100%;
   text-align: center;
-  padding: 40px 20px;
+  padding: 0 20px 40px;
+  box-sizing: border-box;
+  position: relative;
+}
+
+@media screen and (min-width: 768px) {
+  .subscribe__wrapper {
+    padding: 0 30px 80px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .subscribe__wrapper {
+    padding: 96px 110px 104px;
+  }
 }
 
 .subscribe__title {
@@ -8,13 +23,22 @@
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
+  width: max-content;
   color: #000000;
+  margin: 0 -20px;
+  padding: 0 40px 0 20px;
+  text-align: start;
+  position: relative;
+  background-color: #ffffff;
 }
 
 @media screen and (min-width: 768px) {
   .subscribe__title {
     font-size: 32px;
     line-height: 32px;
+    margin: 0;
+    padding: 0 40px;
+    margin-bottom: 66px;
   }
 }
 
@@ -22,6 +46,26 @@
   .subscribe__title {
     font-size: 40px;
     line-height: 40px;
+    margin-bottom: 72px;
+  }
+}
+
+.subscribe__wrapper::after {
+  content: "";
+  z-index: -1;
+  background-color: #68b738;
+  height: 2px;
+  position: absolute;
+  top: 12px;
+  left: 0;
+  right: 0;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+@media screen and (min-width: 1440px) {
+  .subscribe__wrapper::after {
+    top: 116px;
   }
 }
 
@@ -31,12 +75,21 @@
   font-weight: 400;
   line-height: 24px;
   color: #000000;
+  margin: 32px 0 24px;
 }
 
 @media screen and (min-width: 768px) {
   .subscribe__description {
     font-size: 24px;
     line-height: 32px;
+    width: 632px;
+    margin: 0 auto 24px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .subscribe__description {
+    width: 100%;
   }
 }
 
@@ -44,6 +97,7 @@
   .subscribe__form {
     display: flex;
     justify-content: center;
+    margin: 0 38px;
   }
 }
 
@@ -53,16 +107,18 @@
   font-weight: 400;
   line-height: 30px;
   color: #444444;
-  width: 280px;
   height: 56px;
   box-sizing: border-box;
   text-transform: uppercase;
   padding-left: 13px;
+  width: 100%;
+  margin-bottom: 16px;
 }
 
 @media screen and (min-width: 768px) {
   .subscribe__input {
-    width: 376px;
+    width: 100%;
+    margin: 0;
   }
 }
 
@@ -77,16 +133,16 @@
   font-weight: 400;
   line-height: 26px;
   border: none;
-  width: 280px;
-  height: 56px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
+  width: 100%;
+  padding: 15px 0;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
   .newsletter-button {
     width: 256px;
+    flex-shrink: 0;
   }
 }
 
