--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -1,6 +1,34 @@
+.contacts {
+  position: relative;
+}
+
 .contacts__wrapper {
-  display: flex;
+  width: 100%;
   padding: 26px 20px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__wrapper {
+    padding: 60px 70px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .contacts__wrapper {
+    width: 565px;
+    padding: 60px 80px;
+    position: absolute;
+    top: 95px;
+    left: 110px;
+    background-color: #ffffff;
+  }
+}
+
+.contacts__wrapper-catalog {
+  background-color: #f2f2f2;
 }
 
 .contacts__description {
@@ -10,12 +38,15 @@
   line-height: 20px;
   color: #111111;
   text-transform: uppercase;
+  width: 140px;
+  margin: 0;
 }
 
 @media screen and (min-width: 768px) {
   .contacts__description {
     font-size: 20px;
     line-height: 26px;
+    width: 165px;
   }
 }
 
@@ -23,13 +54,42 @@
   font-family: $primary-font;
   font-size: 14px;
   font-weight: 400;
+  font-style: normal;
   line-height: 20px;
   color: #444444;
+  width: 140px;
 }
 
 @media screen and (min-width: 768px) {
   .contacts__adress {
     font-size: 16px;
     line-height: 20px;
+    width: 165px;
+    text-align: right;
   }
+}
+
+.contacts__adress-description {
+  margin: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__adress-description:not(:last-child) {
+    margin-bottom: 19px;
+  }
+}
+
+.map__wrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.map__wrapper picture {
+  display: none;
+}
+
+.map__wrapper iframe {
+  border: none;
+  display: block;
+  width: 100%;
 }
