--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -1,20 +1,46 @@
+@media screen and (min-width: 768px) {
+  .main-nav {
+    margin-left: auto;
+  }
+}
+
 .main-nav__list {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  display: none;
+}
+
+@media (width <= 767px) {
+  .main-nav__list--open {
+    text-align: center;
+    background-color: #ffffff;
+    border-top: 1px solid #e6e6e6;
+    border-bottom: 1px solid #e6e6e6;
+    flex-flow: column wrap;
+    align-items: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    position: absolute;
+    top: 65px;
+    left: 0;
+    z-index: 2;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .main-nav__list {
     display: flex;
-    width: 436px;
-    justify-content: space-between;
+    gap: 33px;
   }
 }
 
-@media screen and (min-width: 1440px) {
-  .main-nav__list {
-    width: 475px;
+@media (width <= 767px) {
+  .main-nav__item {
+    width: 100%;
   }
 }
 
@@ -26,12 +52,17 @@
   text-transform: uppercase;
   text-decoration: 0;
   color: #000000;
+  display: block;
+  padding: 22px 0;
+  border-bottom: 1px solid #e6e6e6;
 }
 
 @media screen and (min-width: 768px) {
   .main-nav__item a {
     font-size: 18px;
     line-height: 24px;
+    padding: 12px 0;
+    border: none;
   }
 }
 
@@ -39,7 +70,33 @@
   .main-nav__item a {
     font-size: 20px;
     line-height: 30px;
+    color: #ffffff;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .main-nav__item-catalog a {
     color: #111111;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main-nav__item--current {
+    border-bottom: 2px solid #68b738;
+    bottom: 4px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .main-nav__item--current {
+    border-bottom: 2px solid #ffffff;
+    bottom: 4px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .main-nav__item-catalog.main-nav__item--current {
+    border-bottom: 2px solid #68b738;
   }
 }
 
@@ -51,6 +108,8 @@
   width: 24px;
   height: 24px;
   border: none;
+  display: block;
+  margin: 20px 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -64,7 +123,4 @@
   background-image: url("../../icons/stack.svg#close");
   background-size: 18px 18px;
   background-repeat: no-repeat;
-  width: 18px;
-  height: 18px;
-  border: none;
 }
