--- a/source/styles/blocks/catalog-additionally.scss
+++ b/source/styles/blocks/catalog-additionally.scss
@@ -203,7 +203,7 @@
 }
 
 .catalog-additionally__gift {
-  background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../../images/catalog-cat-bg-mobile@1x.png" 1x, "../../images/catalog-cat-bg-mobile@2x.png" 2x);
+  background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../images/catalog-cat-bg-mobile@1x.png" 1x, "../images/catalog-cat-bg-mobile@2x.png" 2x);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -215,7 +215,7 @@
 
 @media screen and (min-width: 768px) {
   .catalog-additionally__gift {
-    background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../../images/catalog-cat-bg-tablet@1x.png" 1x, "../../images/catalog-cat-bg-tablet@2x.png" 2x);
+    background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../images/catalog-cat-bg-tablet@1x.png" 1x, "../images/catalog-cat-bg-tablet@2x.png" 2x);
     background-repeat: no-repeat;
     background-size: cover;
     height: 200px;
@@ -226,7 +226,7 @@
 @media screen and (min-width: 1440px) {
   .catalog-additionally__gift {
     color: #000000;
-    background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../../images/catalog-cat-bg-desktop@1x.png" 1x, "../../images/catalog-cat-bg-desktop@2x.png" 2x);
+    background: linear-gradient(to right, #ffffff 0%, rgba(104, 183, 56, 0.85) 0%), image-set("../images/catalog-cat-bg-desktop@1x.png" 1x, "../images/catalog-cat-bg-desktop@2x.png" 2x);
     width: 245px;
     height: 288px;
     margin: 0;
