--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,7 +1,7 @@
 .promo__wrapper {
   width: 100%;
   color: #ffffff;
-  background: linear-gradient(to top, #ffffff 178px, rgba(104, 183, 56, 0.85) 178px), image-set("../../images/index-cat-bg-mobile@1x.png" 1x, "../../images/index-cat-bg-mobile@2x.png" 2x);
+  background: linear-gradient(to top, #ffffff 178px, rgba(104, 183, 56, 0.85) 178px), image-set("../images/index-cat-bg-mobile@1x.png" 1x, "../images/index-cat-bg-mobile@2x.png" 2x);
   background-repeat: no-repeat;
   background-position: top;
   text-align: center;
@@ -35,18 +35,10 @@
   }
 }
 
-/* @media screen and (min-width: 1440px) {
-  .promo__wrapper {
-    color: #000000;
-    background: linear-gradient(to right, #ffffff 50%, rgba(104, 183, 56, 0.85) 50%), image-set("../../images/index-cat-bg-desktop@1x.png" 1x, "../../images/index-cat-bg-desktop@2x.png" 2x);
-    width: 1440px;
-  }
-} */
-
 @media screen and (min-width: 1440px) {
   .promo__wrapper::before {
     content: "";
-    background: linear-gradient(to right, #ffffff 0, rgba(104, 183, 56, 0.85) 0), image-set("../../images/index-cat-bg-desktop@1x.png" 1x, "../../images/index-cat-bg-desktop@2x.png" 2x);
+    background: linear-gradient(to right, #ffffff 0, rgba(104, 183, 56, 0.85) 0), image-set("../images/index-cat-bg-desktop@1x.png" 1x, "../images/index-cat-bg-desktop@2x.png" 2x);
     background-size: 100%;
     background-repeat: no-repeat;
     width: 720px;
